--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="action_sign_up_short">Register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="email">Email</string>
+    <string name="pseudo">Pseudo</string>
     <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
     <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
     <string name="change_email">Change Email</string>
@@ -34,8 +35,6 @@
     <string name="forgot_password_msg">We just need your registered Email to sent you password reset instructions.</string>
     <string name="hint_confirmPassword">Confirm password</string>
     <string name="prompt_password">Current password</string>
-
-    <!-- Google Map -->
-    <string name="title_activity_maps">Map</string>
+    <string name="revoke_google_access">Disconnect your Google account</string>
 
 </resources>
