--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,6 @@
     <!-- GENERAL -->
     <string name="app_name">PimpMyTrip</string>
 
-    <!-- Authentication -->
-
     <!-- NAVIGATION DRAWER -->
     <string name="titleMap">Map</string>
     <string name="titleRefTrips">Reference Trips</string>
@@ -15,11 +13,7 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-
-    <!-- STATISTICS -->
-
+    <!-- AUTHENTICATION -->
     <string name="action_sign_up_short">Register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="email">Email</string>
@@ -152,7 +146,11 @@
     <!-- Trips Management -->
     <string name="nameTabTripCreation">Create</string>
     <string name="nameTabTripManagement">Manage</string>
-        <!-- Floating Action Menu -->
+
+    <!-- Floating Action Menu -->
     <string name="nameFABsaveTrip">Save</string>
     <string name="nameFABdeleteTrip">Reset</string>
+
+    <!-- TRIP CARDVIEW -->
+    <string name="delete">DELETE</string>
 </resources>
