--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <!-- GENERAL -->
     <string name="app_name">PimpMyTrip</string>
 
-    <!-- Authentication -->
+
 
     <!-- NAVIGATION DRAWER -->
     <string name="titleMap">Map</string>
@@ -18,8 +18,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
-    <!-- STATISTICS -->
-
+    <!-- Authentication -->
     <string name="action_sign_up_short">Register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="email">Email</string>
@@ -155,4 +154,13 @@
         <!-- Floating Action Menu -->
     <string name="nameFABsaveTrip">Save</string>
     <string name="nameFABdeleteTrip">Reset</string>
+
+    <!-- PROFILE -->
+    <string name="titleStats">Statistics</string>
+    <string name="titleMemberSince">Member since ??</string>
+    <string name="pseudoUser">Corentin</string>
+        <!-- STATISTICS -->
+        <string name="totalDistanceLabel">Total Distance</string>
+        <string name="dd">dd</string>
+
 </resources>
