--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -160,19 +160,22 @@
     <string name="titleMemberSince">Member since ??</string>
     <string name="pseudoUser">Corentin</string>
     <string name="tripsLabel">Trips</string>
-        <!-- STATISTICS -->
-        <string name="totalDistanceLabel">Total Distance : </string>
-        <string name="nbMyTripsCreatedLabel">Trips Created : </string>
-        <string name="totalDistanceBySUVLAbel">Total Distance by SUV : </string>
-        <string name="totalDistanceByWalkLabel">Total Distance by walk : </string>
-        <string name="nbTripsCreatedLabel">Trips Created : </string>
-        <string name="nbTripsWalkingCreatedLabel">Trips Created by walk : </string>
-        <string name="nbTripsSUVCreatedLabel">Trips Created by SUV : </string>
-        <string name="totalTimeTravelledLabel">Time Travelled : </string>
-        <string name="totalTimeWalkedLabel">Time Travelled by walk : </string>
-        <string name="totalTimeDroveLabel">Time Travelled by SUV : </string>
-        <string name="nbMyTripsTravelledLabel">Trips Travelled : </string>
+    <!-- STATISTICS -->
+    <string name="totalDistanceLabel">Total Distance : </string>
+    <string name="nbMyTripsCreatedLabel">Trips Created : </string>
+    <string name="totalDistanceBySUVLAbel">Total Distance by SUV : </string>
+    <string name="totalDistanceByWalkLabel">Total Distance by walk : </string>
+    <string name="nbTripsCreatedLabel">Trips Created : </string>
+    <string name="nbTripsWalkingCreatedLabel">Trips Created by walk : </string>
+    <string name="nbTripsSUVCreatedLabel">Trips Created by SUV : </string>
+    <string name="totalTimeTravelledLabel">Time Travelled : </string>
+    <string name="totalTimeWalkedLabel">Time Travelled by walk : </string>
+    <string name="totalTimeDroveLabel">Time Travelled by SUV : </string>
+    <string name="nbMyTripsTravelledLabel">Trips Travelled : </string>
 
     <!-- TRIP CARDVIEW -->
     <string name="delete">DELETE</string>
+    <string name="title_activity_main2">Main2Activity</string>
+
+    <string name="hello_world">Hello world!</string>
 </resources>
