ADD live feature, profile fixing + undo feature WIP

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,6 +68,7 @@
     <!-- Floating Action Menu -->
     <string name="nameFABsaveTrip">Save</string>
     <string name="nameFABdeleteTrip">Reset</string>
+    <string name="nameFABundoTrip">Undo</string>
 
     <!-- PROFILE -->
     <string name="titleStats">Statistics</string>
